# Boing

./: .gitignore  Boing  CMakeLists.txt  LICENSE  README.md  boing.tex  build.gradle  settings.gradle  things_to_test.md
dev/js_prototype/: index.html  main.js  style.css
dev/js_prototype/lib/jQuery/: jquery-ui-1.12.1.min.js
gradle/wrapper/: gradle-wrapper.properties
include/: body.h  boing.h  describable.h  edge.h  manifold.h  vec2.h  world.h
lib/gtest/: CMakeLists.txt
src/main/cpp/: body.cpp  boing.cpp  describable.cpp  edge.cpp  vec2.cpp  world.cpp
src/main/java/me/winter/boing/: AbstractPhysicsWorldImpl.java  AbstractWorld.java  Body.java  BodyState.java  BodyStep.java  Collision.java  CollisionDynamicVariable.java  DynamicBody.java  MoveState.java  OptimizedWorld.java  PhysicsWorld.java  PreAABB.java  SimpleWorld.java  UpdatableBody.java  World.java  WorldImplBodyStep.java
src/main/java/me/winter/boing/colliders/: AbstractCollider.java  Bound.java  Box.java  Circle.java  Collider.java  Limit.java
src/main/java/me/winter/boing/detection/: CollisionDetector.java  DetectionHandler.java  DetectorSwapper.java  PooledDetector.java
src/main/java/me/winter/boing/impl/: BodyImpl.java  BodyStateImpl.java  BodyStepImpl.java  DynamicBodyImpl.java  MoveStateImpl.java  PhysicsWorldImpl.java  WorldImpl.java
src/main/java/me/winter/boing/physics/: AbstractWorld.java  Body.java  Collider.java  Collision.java  CollisionDetection.java  DynamicBody.java  DynamicSolid.java  IntVector.java  SimpleWorld.java  Solid.java  UpdatableBody.java  UpdatableSolid.java  VelocityUtil.java  World.java
src/main/java/me/winter/boing/resolver/: CappedWeightResolver.java  (+4 more)
src/main/js/: frontend.js  index.html  main.js  style.css
src/test/cpp/: collision_test.cpp  displacement_test.cpp  size_test.cpp  test.cpp
(+160 files in other folders)
